--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Second Page</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
+            <a href="aboutrafting.html">About Rafting</a>
+            <a href="https://roimanromero.github.io/planrafting/site-plan-rafting.html">Site Plan</a>
+            <a href="faqs.html">FAQs</a>
         </nav>
         </header>
         <!-- Main Content -->
