added form to the website

--- a/aboutrafting.html
+++ b/aboutrafting.html
@@ -17,6 +17,7 @@
             <a href="aboutrafting.html">About Rafting</a>
             <a href="https://roimanromero.github.io/planrafting/site-plan-rafting.html">Site Plan</a>
             <a href="faqs.html">FAQs</a>
+            <a href="contactus.html">Contact Us</a>
         </nav>
         </header>
         <!-- Main Content -->
